END bohužel zelená je humus

--- a/src/Koncerty.html
+++ b/src/Koncerty.html
@@ -3,8 +3,38 @@
 <head>
     <meta charset="UTF-8">
     <title>kok</title>
+    <link rel="stylesheet" href="Koncerty.css">
+    <link rel="stylesheet" href="fontawesome-free-5.15.1-web/css/all.css">
+
 </head>
 <body>
+<div class="page">
+    <nav>
+        <ul><li class="Navigace"><a href="Main.html"><i class="fas fa-home"><div class="hidden-text">Homedvbdjabnfcdhadhnjsb dhbn vhjdsfds</div>
+        </i></a></li></ul>
+        <ul>
+            <li class="Navigace"><a href="Koncerty.html"><i class="fas fa-archive"></i></a></li>
+            <li class="Navigace"><a href="Alba.html"><i class="fas fa-music"></i></a></li>
+        </ul>
+        <ul>
+            <li class="Navigace"><a href="https://www.instagram.com/marilynmanson/"><i class="fab fa-instagram"></i></a></li>
+            <li class="Navigace"><a href="https://www.facebook.com/MarilynManson"><i class="fab fa-facebook-square"></i></a></li>
+            <li class="Navigace"><a href="https://open.spotify.com/artist/2VYQTNDsvvKN9wmU5W7xpj?si=nKcjqYZSSRWoZQ705mExrw"><i class="fab fa-spotify"></i></a></li>
+        </ul>
+    </nav>
+</div>
+<div class="hidden-text">Homedvbdjabnfcdhadhnjsb dhbn vhjdsfds</div>
+<div class="objevse2">Archiv koncertů</div>
+<div class="objevse3">Alba</div>
 
+<div class="zarovnavacidiv">
+    <div class="Textonem">
+        <h1>Marilyn Manson</h1>
+        <p class="nejakysracky">Brian Hugh Warner je zakladatel a zpěvák skupiny Marilyn Manson & the Spooky Kids, později známé už jen jako Marilyn Manson. Jméno Marilyn Manson používá jako svůj pseudonym. Pseudonym je odvozen ze jmen filmové hvězdy Marilyn Monroe a známého zločince Charlese Mansona. Byl redaktorem floridského hudebního časopisu. Objevil ho hudebník Trent Reznor.</p>
+    </div>
+    <div>
+        <img class="obrazek1" src="We%20are%20chaos%20MM.jpg">
+    </div>
+</div>
 </body>
 </html>
