--- a/src/Main.html
+++ b/src/Main.html
@@ -16,12 +16,15 @@
             <li class="Navigace"><a href="Alba.html"><i class="fas fa-music"></i></a></li>
         </ul>
         <ul>
-        <li class="Navigace"><a href="https://www.instagram.com/marilynmanson/"><i class="fab fa-instagram-square"></i></a></li>
+        <li class="Navigace"><a href="https://www.instagram.com/marilynmanson/"><i class="fab fa-instagram"></i></a></li>
         <li class="Navigace"><a href="https://www.facebook.com/MarilynManson"><i class="fab fa-facebook-square"></i></a></li>
         <li class="Navigace"><a href="https://open.spotify.com/artist/2VYQTNDsvvKN9wmU5W7xpj?si=nKcjqYZSSRWoZQ705mExrw"><i class="fab fa-spotify"></i></a></li>
         </ul>
     </nav>
 </div>
+<div class="objevse1">Home</div>
+<div class="objevse2">Archiv koncertů</div>
+<div class="objevse3">Alba</div>
 
 <div class="zarovnavacidiv">
     <div class="Textonem">
