responsive nav není v mainu :)

--- a/src/Koncerty.html
+++ b/src/Koncerty.html
@@ -14,7 +14,7 @@
         </i></a></li></ul>
         <ul>
             <li class="Navigace"><a href="Koncerty.html"><i class="fas fa-archive"></i></a></li>
-            <li class="Navigace"><a href="Alba.html"><i class="fas fa-music"></i></a></li>
+            <li class="Navigace"><a href="ResNav.html"><i class="fas fa-music"></i></a></li>
         </ul>
         <ul>
             <li class="Navigace"><a href="https://www.instagram.com/marilynmanson/"><i class="fab fa-instagram"></i></a></li>
