--- a/src/Main.html
+++ b/src/Main.html
@@ -10,22 +10,34 @@
 <body>
 <div class="page">
     <nav>
-        <ul><li class="Navigace"><a href="Main.html"><i class="fas fa-home"></i></a></li></ul>
-        <ul>
-            <li class="Navigace"><a href="Koncerty.html"><i class="fas fa-archive"></i></a></li>
-            <li class="Navigace"><a href="Alba.html"><i class="fas fa-music"></i></a></li>
+
+        <ul class="Menu">
+            <li><i class="fa fa-bars imenu"></i></li>
+            <a href="Main.html" class="Menu">Menu</a>
+            <a href="Koncerty.html"class="Menu">Menu</a>
+            <a href="ResNav.html" class="Menu">Menu</a>
+            <a href="ResNav.html" class="Menu">ALONE</a>
         </ul>
-        <ul>
+
+
+        <ul class="zbytek"><li class="Navigace"><a href="Main.html"><i class="fas fa-home"></i></a></li></ul>
+
+        <ul class="zbytek">
+            <li class="Navigace"><a href="Koncerty.html"><i class="fas fa-archive"></i></a></li>
+            <li class="Navigace"><a href="ResNav.html"><i class="fas fa-music"></i></a></li>
+        </ul>
+
+        <ul class="zbytek">
         <li class="Navigace"><a href="https://www.instagram.com/marilynmanson/"><i class="fab fa-instagram"></i></a></li>
         <li class="Navigace"><a href="https://www.facebook.com/MarilynManson"><i class="fab fa-facebook-square"></i></a></li>
         <li class="Navigace"><a href="https://open.spotify.com/artist/2VYQTNDsvvKN9wmU5W7xpj?si=nKcjqYZSSRWoZQ705mExrw"><i class="fab fa-spotify"></i></a></li>
         </ul>
+
     </nav>
 </div>
-<div class="objevse1">Home</div>
-<div class="objevse2">Archiv koncertů</div>
-<div class="objevse3">Alba</div>
 
+
+<div class="DivMenu"> </div>
 <div class="zarovnavacidiv">
     <div class="Textonem">
         <h1>Marilyn Manson</h1>
