--- a/src/ResNav.html
+++ b/src/ResNav.html
@@ -12,18 +12,14 @@
     <a class="activ" href="#">NelíbíSeMiTo</a>
 
     <div class="text1">
-
         <a href="#">SUCID</a>
         <a href="#">IWant</a>
         <a href="#">PLSNOW</a></div>
 
-    <div class="dropbender">
-        <i class="fas fa-table Menu"></i>
-        <div class="text2">
+    <div class="dropbender"><i class="fas fa-table Menu"></i><div class="text2">
             <a href="#">KiLL</a>
             <a href="#">ME</a>
-            <a href="#">RN</a></div>
-    </div>
+            <a href="#">RN</a></div></div>
 </div>
 
 
